--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>LOVE Stack Interpreter</title>
+  <link rel="icon" href="favicon.png">
   <style>
     /* --- Layout & Basics --- */
     *{box-sizing:border-box}
